syntax = "proto3";

package response;

service ResponseController {
  // Le Hive envoie une commande, l'agent confirme
  rpc ExecuteAction(ActionRequest) returns (ActionResponse) {}
  
  // L'agent peut aussi demander le statut des actions
  rpc GetActionStatus(ActionStatusRequest) returns (ActionStatusResponse) {}
}

message ActionRequest {
  string action_name = 1; // Ex: "isolate", "deisolate", "kill_process", "delete_file"
  map<string, string> parameters = 2; // Paramètres spécifiques à l'action
  string request_id = 3; // ID unique pour tracer la requête
  int64 timestamp = 4; // Timestamp de la requête
}

message ActionResponse {
  bool success = 1;
  string message = 2;
  string request_id = 3; // Écho de l'ID de la requête
  int64 timestamp = 4; // Timestamp de la réponse
  map<string, string> details = 5; // Détails supplémentaires de l'exécution
}

message ActionStatusRequest {
  string action_name = 1; // Action dont on veut le statut
  string request_id = 2; // ID de la requête originale
}

message ActionStatusResponse {
  string status = 1; // "pending", "running", "completed", "failed"
  string message = 2;
  int64 start_time = 3;
  int64 end_time = 4;
  map<string, string> results = 5; // Résultats de l'action
} 